@@ -394,29 +394,29 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
 
     connect(lighterPopupMenuBgnd, SIGNAL(valueChanged(int)), SLOT(updateChanged()));
     connect(menuStripe, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(menuStripeAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(round, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(toolbarBorders, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(sliderThumbs, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(handles, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(appearance, SIGNAL(activated(int)), SLOT(updateChanged()));
+    connect(menuStripeAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(round, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(toolbarBorders, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(sliderThumbs, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(handles, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(appearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(customMenuTextColor, SIGNAL(toggled(bool)), SLOT(customMenuTextColorChanged()));
-    connect(stripedProgress, SIGNAL(activated(int)), SLOT(stripedProgressChanged()));
+    connect(stripedProgress, SIGNAL(currentIndexChanged(int)), SLOT(stripedProgressChanged()));
     connect(animatedProgress, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(embolden, SIGNAL(toggled(bool)), SLOT(emboldenToggled()));
-    connect(defBtnIndicator, SIGNAL(activated(int)), SLOT(defBtnIndicatorChanged()));
+    connect(defBtnIndicator, SIGNAL(currentIndexChanged(int)), SLOT(defBtnIndicatorChanged()));
     connect(highlightTab, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(menubarAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(toolbarAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(lvAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(sliderAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(tabAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(activeTabAppearance, SIGNAL(activated(int)), SLOT(activeTabAppearanceChanged()));
-    connect(toolbarSeparators, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(splitters, SIGNAL(activated(int)), SLOT(updateChanged()));
+    connect(menubarAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(toolbarAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(lvAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(sliderAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(tabAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(activeTabAppearance, SIGNAL(currentIndexChanged(int)), SLOT(activeTabAppearanceChanged()));
+    connect(toolbarSeparators, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(splitters, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(fixParentlessDialogs, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(fillSlider, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(sliderStyle, SIGNAL(activated(int)), SLOT(updateChanged()));
+    connect(sliderStyle, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(roundMbTopOnly, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(fillProgress, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(darkerBorders, SIGNAL(toggled(bool)), SLOT(updateChanged()));
@@ -428,22 +428,22 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     connect(colorSelTab, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(stdSidebarButtons, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(borderMenuitems, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(progressAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(progressGrooveAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(progressGrooveColor, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(menuitemAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(titlebarAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(inactiveTitlebarAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(titlebarButtonAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
+    connect(progressAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(progressGrooveAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(progressGrooveColor, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(menuitemAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(titlebarAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(inactiveTitlebarAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(titlebarButtonAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(colorTitlebarOnly, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(selectionAppearance, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(shadeCheckRadio, SIGNAL(activated(int)), SLOT(shadeCheckRadioChanged()));
+    connect(selectionAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(shadeCheckRadio, SIGNAL(currentIndexChanged(int)), SLOT(shadeCheckRadioChanged()));
     connect(customCheckRadioColor, SIGNAL(changed(const QColor &)), SLOT(updateChanged()));
-    connect(focus, SIGNAL(activated(int)), SLOT(updateChanged()));
+    connect(focus, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(lvLines, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(drawStatusBarFrames, SIGNAL(toggled(bool)), SLOT(updateChanged()));
-    connect(buttonEffect, SIGNAL(activated(int)), SLOT(buttonEffectChanged()));
-    connect(coloredMouseOver, SIGNAL(activated(int)), SLOT(coloredMouseOverChanged()));
+    connect(buttonEffect, SIGNAL(currentIndexChanged(int)), SLOT(buttonEffectChanged()));
+    connect(coloredMouseOver, SIGNAL(currentIndexChanged(int)), SLOT(coloredMouseOverChanged()));
     connect(menubarMouseOver, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(shadeMenubarOnlyWhenActive, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(thinnerMenuItems, SIGNAL(toggled(bool)), SLOT(updateChanged()));
@@ -451,11 +451,11 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     connect(customMenubarsColor, SIGNAL(changed(const QColor &)), SLOT(updateChanged()));
     connect(customMenuSelTextColor, SIGNAL(changed(const QColor &)), SLOT(updateChanged()));
     connect(customMenuNormTextColor, SIGNAL(changed(const QColor &)), SLOT(updateChanged()));
-    connect(shadeSliders, SIGNAL(activated(int)), SLOT(shadeSlidersChanged()));
-    connect(shadeMenubars, SIGNAL(activated(int)), SLOT(shadeMenubarsChanged()));
+    connect(shadeSliders, SIGNAL(currentIndexChanged(int)), SLOT(shadeSlidersChanged()));
+    connect(shadeMenubars, SIGNAL(currentIndexChanged(int)), SLOT(shadeMenubarsChanged()));
     connect(highlightFactor, SIGNAL(valueChanged(int)), SLOT(updateChanged()));
-    connect(scrollbarType, SIGNAL(activated(int)), SLOT(updateChanged()));
-    connect(shading, SIGNAL(activated(int)), SLOT(shadingChanged()));
+    connect(scrollbarType, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(shading, SIGNAL(currentIndexChanged(int)), SLOT(shadingChanged()));
     connect(gtkScrollViews, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(squareScrollViews, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(highlightScrollViews, SIGNAL(toggled(bool)), SLOT(updateChanged()));
